2. Основы javascript. 13. Циклы while и for

--- a/2. Основы JavaScript/9. Операторы сравнения/index.html
+++ b/2. Основы JavaScript/9. Операторы сравнения/index.html
@@ -30,9 +30,9 @@
             <h2>Используется кодировка Unicode, а не настоящий алфавит</h2>
             <p>Приведенный выше алгоритм сравнения похож на алгоритм, используемый в словарях и телефонных книгах, но между
             ними есть и различия.</p>
-            <p>Например, в JavaScipt имеет значение регистр символов. Заглавная буква <code>"A"</code> не равна строчной
+            <p>Например, в JavaScript имеет значение регистр символов. Заглавная буква <code>"A"</code> не равна строчной
             <code>"a"</code>. Какая же из них больше? Строчная <code>"a"</code>. Почему? Потому что строчные буквы имеют
-            большие код во внутренней таблице кодирования, которую использует JavaScipt (Unicode)</p>
+            большие код во внутренней таблице кодирования, которую использует JavaScript (Unicode)</p>
         </article>
     </article>
 
@@ -127,7 +127,7 @@
             <li>Относитесь очень осторожно к любому сравнению с <code>undefined/null</code>, кроме случаев строго
             равенства <code>===</code>;</li>
             <li>Не используйте сравнения <code>> < >= <=</code> с переменными, которые могут принимать значения
-            <code>null/undefined</code>, разве что вы полностью уверены в том, что делаете. Если переменная модет принимать
+            <code>null/undefined</code>, разве что вы полностью уверены в том, что делаете. Если переменная может принимать
             эти значения, то добавьте для них отдельные проверки.</li>
         </ul>
     </article>
