13. модули. 1. модули, введение

--- a/12. Генераторы, продвинутая итерация/2. Асинхронные итераторы и генераторы/index.html
+++ b/12. Генераторы, продвинутая итерация/2. Асинхронные итераторы и генераторы/index.html
@@ -431,7 +431,7 @@
 
     (async () => {
         for await (let commit of fetchCommits(repo)) {
-            console.log(commit.commit.author.date);
+            console.log(commit.commit.message);
         }
     })();
 </script>
