--- a/Язык JavaScript/11. Промисы, async, await/7. Микрозадачи/index.html
+++ b/Язык JavaScript/11. Промисы, async, await/7. Микрозадачи/index.html
@@ -50,7 +50,7 @@
         <code>промис выполнен</code>?</b></p>
         <p>Легко, используя <code>.then</code>:</p>
         <code>
-            Promise.resolve()
+            Promise.resolve()<br>
             &nbsp;&nbsp;.then(() => alert('Промис выполнен'))<br>
             &nbsp;&nbsp;.then(() => alert('Код выполнен'));
         </code>
