браузер: документ, события, интерфейсы. 1. документ. 1. браузерное окружение, спецификации

--- a/Язык JavaScript/13. Модули/1. Модули, введение/index.html
+++ b/Язык JavaScript/13. Модули/1. Модули, введение/index.html
@@ -68,7 +68,7 @@
         <code>
             &lt!doctype html&gt<br>
             &ltscript type="module"&gt<br>
-            &nbsp;&nbsp;impost {sayHi} from './sayHi.js';<br>
+            &nbsp;&nbsp;import {sayHi} from './sayHi.js';<br>
             &nbsp;&nbsp;<br>
             &nbsp;&nbsp;document.body.innerHTML = sayHi('John');<br>
             &lt/script&gt
