6. разное. 3. событийный цикл: микрозадачи и макрозадачи

--- a/Браузер. Документ, события, интерфейсы/2. Введение в события/3. Делегирование событий/index.html
+++ b/Браузер. Документ, события, интерфейсы/2. Введение в события/3. Делегирование событий/index.html
@@ -352,7 +352,7 @@
         при клике»:</p>
         <code>
             Счетчик: &ltinput type="button" value="1" data-counter&gt<br>
-            Еще счетчик: &ltinput type="button" value="2" data-counter<br>
+            Еще счетчик: &ltinput type="button" value="2" data-counter&gt;<br>
             <br>
             &ltscript&gt<br>
             &nbsp;&nbsp;document.addEventListener('click', function(event) {<br>
