фреймы и окна. 1. открытие окон и методы window

--- a/Фреймы и окна/1. Открытие окон и методы window/index.html
+++ b/Фреймы и окна/1. Открытие окон и методы window/index.html
@@ -306,7 +306,130 @@ newWindow.onload = function() {
 
     <article>
         <h2>Прокрутка и изменение размеров</h2>
+        <p>Методы для передвижения и изменения размеров окна:</p>
+        <ul>
+            <li>
+                <p><code>win.moveBy(x, y)</code> - переместить окно относительно текущей позиции на <code>x</code>
+                пикселей вправо и <code>y</code> пикселей вниз. Допустимы отрицательные значения (для перемещения окна
+                влево и вверх).</p>
+            </li>
+            <li>
+                <p><code>win.moveTo(x, y)</code> - переместить окно на координаты экрана <code>(x, y)</code>.</p>
+            </li>
+            <li>
+                <p><code>win.resizeBy(width, height)</code> - изменить размер окна на указанные значения
+                <code>width/height</code> относительно текущего размера. Допустимы отрицательные значения.</p>
+            </li>
+            <li>
+                <p><code>win.resizeTo(width, height)</code> - изменить размер окна до указанных значений.</p>
+            </li>
+        </ul>
+        <p>Также существует событие <code>window.onresize</code>.</p>
 
+        <article class="warning">
+            <h3>Только попапы</h3>
+            <p>Чтобы предупредить возможные злоупотребления, браузер обычно блокирует эти методы. Они гарантированно
+            работают только с попапами, которые мы открыли сами и у которых нет дополнительных вкладок.</p>
+        </article>
+
+        <article class="warning">
+            <h3>Нельзя свернуть/развернуть окно</h3>
+            <p>Методами JavaScript нельзя свернуть или развернуть («максимизировать») окно на весь экран. За это
+            отвечают функции уровня операционной системы, и они скрыты от фронтенд-разработчиков.</p>
+            <p>Методы перемещения и изменения размеров окна не работают для свернутых и развернутых на весь экран окон.</p>
+        </article>
+    </article>
+
+    <article>
+        <h2>Прокрутка окна</h2>
+        <p>Мы уже говорили о прокрутке окна в главе <a target="_blank" href="../../Браузер.%20Документ,%20события,%20интерфейсы/1.%20Документ/10.%20Размеры%20и%20прокрутка%20окна/index.html">Размеры и прокрутка окна</a>.</p>
+        <ul>
+            <li>
+                <p><code>win.scrollBy(x, y)</code> - прокрутить окно на <code>x</code> пикселей вправо и <code>y</code>
+                пикселей вниз относительно текущей прокрутки. Допустимы отрицательные значения.</p>
+            </li>
+            <li>
+                <p><code>win.scrollTo(x, y)</code> - прокрутить окно до заданных координат <code>(x, y)</code>.</p>
+            </li>
+            <li>
+                <p><code>elem.scrollIntoView(top=true)</code> - прокрутить окно так, чтобы <code>elem</code> для
+                <code>elem.scrollIntoView(false)</code> появился вверху (по умолчанию) или внизу.</p>
+            </li>
+        </ul>
+        <p>Также существует событие <code>window.onscroll</code>.</p>
+    </article>
+
+    <article>
+        <h2>Установка и потеря фокуса</h2>
+        <p>Теоретически, установить попап в фокус можно с помощью метода <code>window.focus()</code>, а убрать из фокуса -
+        с помощью <code>window.blur()</code>. Также существуют события <code>focus/blur</code>, которые позволяют отследить,
+        когда фокус переводится на какое-то другое окно.</p>
+        <p>Раньше на «плохих» сайтах эти методы могли становиться средством манипуляции. Например:</p>
+<pre><code class="language-javascript">window.onblur = () => window.focus();</code></pre>
+        <p>Когда пользователь пытается перевести фокус на другое окно, этот код возвращает фокус назад. Таким образом,
+        фокус как бы «блокируется» в попапе, которые не нужен пользователю.</p>
+        <p>Из-за этого в браузерах и появились ограничения, которые препятствуют такого рода поведению фокуса.
+        Эти ограничения нужны для защиты пользователя от назойливой рекламы и «плохих» страниц, и их работа различается
+        в зависимости от конкретного браузера.</p>
+        <p>Например, мобильный браузер обычно полностью игнорирует такие вызовы метода <code>window.focus()</code>.
+        Также фокусировка не работает, когда попап открыт в отдельной вкладке (в отличие от открытия в отдельном окне).</p>
+        <p>Но все-таки иногда методы фокусировки бывают полезны. Например:</p>
+        <ul>
+            <li>
+                <p>Когда мы открываем попап, может быть хорошей идеей запустить для него <code>newWindow.focus()</code>.
+                Для некоторых комбинаций браузера и операционной системы это устранит неоднозначность - заметит ли
+                пользователь это новое окно.</p>
+            </li>
+            <li>
+                <p>Если нужно отследить, когда посетитель использует веб-приложение, можно отслеживать
+                <code>window.onfocus/onblur</code>. Это позволит ставить на паузу и продолжать выполнение анимаций и
+                других интерактивных действий на странице. При этом важно помнить, что <code>blur</code> означает,
+                что окно больше не в фокусе, но пользователь может по-прежнему видеть его.</p>
+            </li>
+        </ul>
+    </article>
+
+    <article>
+        <h2>Итого</h2>
+        <p>Всплывающие окна используются нечасто. Ведь загрузить новую информацию можно динамически, а показать -
+        в элементе <code>&lt;div&gt;</code>, расположенным наж страницей (<code>z-index</code>). Еще одна альтернатива -
+        тег <code>&lt;iframe&gt;</code>.</p>
+        <p>Если мы открываем попап, хорошей практикой будет предупредить пользователя об этом. Иконка открывающегося
+        окошка на ссылке поможет посетителю понять, что происходит и не потерять оба окна из поля зрения.</p>
+        <ul>
+            <li>
+                <p>Новое окно можно открыть с помощью вызова <code>window.open(url, name, params)</code>. Этот метод
+                возвращает ссылку на новое окно.</p>
+            </li>
+            <li>
+                <p>По умолчанию браузеры блокируют вызов <code>open</code>, выполненные не в результате действий
+                пользователя. Обычно браузеры показывают предупреждение, так что пользователь все-таки может
+                разрешить вызов этого метода.</p>
+            </li>
+            <li>
+                <p>Вместо попапа открывается вкладка, если в вызове <code>open</code> не указаны его размеры.</p>
+            </li>
+            <li>
+                <p>У попапа есть доступ к породившему его окну через свойство <code>window.opener</code>.</p>
+            </li>
+            <li>
+                <p>Если основное окно и попап имеют один домен и протокол, то они свободно могут читать и изменять
+                друг друга. В противном случае, они могут только изменять положение друг друга и взаимодействовать
+                <a target="_blank" href="https://learn.javascript.ru/cross-window-communication">с помощью сообщений</a>.</p>
+            </li>
+        </ul>
+        <p>Чтобы закрыть попап: метод <code>close()</code>. Также попап может закрыть и пользователь (как и любое другое окно).
+        После закрытия окна свойство <code>window.closed</code> имеет значение <code>true</code>.</p>
+        <ul>
+            <li>
+                <p>Методы <code>focus()</code> и <code>blur()</code> позволяют установить или убрать фокус с попапа.
+                Но работают не всегда.</p>
+            </li>
+            <li>
+                <p>События <code>focus</code> и <code>blur</code> позволяют отследить получение и потерю фокуса новым окном.
+                Но, пожалуйста, не забывайте, что окно может остаться видимым и после <code>blur</code>.</p>
+            </li>
+        </ul>
     </article>
 </body>
 </html>
