--- a/Фреймы и окна/1. Открытие окон и методы window/index.html
+++ b/Фреймы и окна/1. Открытие окон и методы window/index.html
@@ -46,7 +46,7 @@
     </article>
 
     <article>
-        <h2>Блокировка попапов</h2>
+        <h2>Блокировка \попапов</h2>
         <p>В прошлом злонамеренные сайты завалили посетителей всплывающими окнами. Такие страницы могли открывать
         сотни попапов с рекламой. Поэтому теперь большинство браузеров пытаются заблокировать всплывающие окна,
         чтобы защитить пользователя.</p>
