Сетевые запросы. 8. XMLHttpRequest

--- a/Сетевые запросы/2. FormData/index.html
+++ b/Сетевые запросы/2. FormData/index.html
@@ -257,7 +257,7 @@ for (let [key, value] of formData) {
         <p>Кроме того, серверы часто настроены на прием именно форм, а не просто бинарных данных.</p>
         <p>В примере ниже посылается изображение из <code>&lt;canvas&gt;</code> и еще несколько полей, как форма,
         используя <code>FormData</code>:</p>
-<pre><code class="language-html">&lt;canvas id="canvasElem" width=100 height=80 style="border: 1px solid black"&lt;/canvas&gt;
+<pre><code class="language-html">&lt;canvas id="canvasElem" width=100 height=80 style="border: 1px solid black"&gt;&lt;/canvas&gt;
 
 &lt;input type="button" value="Отправить" onclick="submit()"&gt;
 
